--- a/css/site.css
+++ b/css/site.css
@@ -207,6 +207,12 @@
                 transform: translate(-50%, -50%) scale(.8);
             }
         }
+
+        @media (max-width: 376px) {
+            .login-form {
+                transform: translate(-50%, -50%) scale(.72);
+            }
+        }
         
 
         .welcome-message {
