--- a/css/dash.css
+++ b/css/dash.css
@@ -278,14 +278,19 @@ th, td {
     }
     .sidebar {
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        top: 0px;
+        left: -10px;
+        padding: 70px 30px;
+        transition: transform 0.3s ease-in-out;
     }
     .sidebar.collapsed {
-        top: 50px;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        position: absolute;
+        top: -15px;
+        padding: 0px;
+        transition: transform 0.3s ease-in-out;
+    }
+    .sidebar.collapsed .menu-section{
+        display: none;
     }
     .form-container {
         grid-template-columns: 1fr;
