--- a/css/dash.css
+++ b/css/dash.css
@@ -282,12 +282,15 @@ th, td {
         left: -10px;
         padding: 70px 30px;
         transition: transform 0.3s ease-in-out;
+        box-shadow: 0px 4px 24.6px 1034px rgba(0, 0, 0, 0.25);
     }
     .sidebar.collapsed {
         position: absolute;
         top: -15px;
         padding: 0px;
         transition: transform 0.3s ease-in-out;
+        box-shadow: none;
+        
     }
     .sidebar.collapsed .menu-section{
         display: none;
