--- a/css/dash.css
+++ b/css/dash.css
@@ -212,6 +212,7 @@ body {
     padding: 12px;
     border: 1px solid #C5C5C5;
     border-radius: 5px;
+    max-width: 300px;
 }
 .tabs {
     display: flex;
@@ -290,12 +291,15 @@ th, td {
         padding: 0px;
         transition: transform 0.3s ease-in-out;
         box-shadow: none;
-        
     }
     .sidebar.collapsed .menu-section{
         display: none;
     }
     .form-container {
+        display: contents;
         grid-template-columns: 1fr;
+    }
+    .form-group select, .form-group input{
+        max-width: 100%;
     }
 }
