--- a/css/dash.css
+++ b/css/dash.css
@@ -74,6 +74,69 @@ body {
     display: flex;
     min-height: 100vh;
 }
+.user-menu {
+    position: relative;
+    display: inline-block;
+}
+.user-icon {
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.dropdown-icon {
+    margin-left: 5px;
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #333;
+}
+.popup-menu {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: white;
+    min-width: 200px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 8px;
+    padding: 10px;
+}
+.popup-menu.show {
+    display: block;
+}
+.user-info {
+    text-align: center;
+    padding: 10px 0;
+    border-bottom: 1px solid #eee;
+}
+.user-name {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+.user-role {
+    color: #666;
+    font-size: 0.9em;
+}
+.menu-options {
+    list-style-type: none;
+    padding: 0;
+    margin: 10px 0 0 0;
+}
+.menu-options li {
+    padding: 10px;
+    cursor: pointer;
+}
+.menu-options li:hover {
+    background-color: #f5f5f5;
+}
+.menu-icon {
+    margin-right: 10px;
+    color: #999;
+}
+
 .sidebar {
     font-family: "Lato", sans-serif;
     max-width: 350px;
