--- a/css/dash.css
+++ b/css/dash.css
@@ -329,7 +329,7 @@ th, td {
     cursor: pointer;
 }
 .button-primary {
-    background-color: #007bff;
+    background-color: #286db8;
     color: white;
 }
 .button-secondary {
