--- a/css/table.css
+++ b/css/table.css
@@ -29,24 +29,26 @@ th {
     color: #999;
 }
 .add-row {
-    margin-top: 20px;
+    margin-top: 30px;
     padding: 10px 20px;
     background-color: #3a943e;
     color: white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    position: absolute;
 }
 .add-row:hover {
     background-color: #45a049;
 }
 .delete-btn, .update-btn {
-    padding: 10px 20px;
+    padding: 5px 1px;
     margin: 0 5px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    min-width: 100px;
+    min-width: 30px;
+    margin: 2px;
 }
 .delete-btn {
     background-color: #d2372c;
