--- a/css/dash.css
+++ b/css/dash.css
@@ -149,7 +149,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-size: 14px;
+    font-size: 13px;
     position: relative;
 }
 .recepcion-number {
@@ -225,12 +225,12 @@ body {
 }
 .main-content-form {
     flex-grow: 1;
-    padding: 30px;
+    padding: 50px;
     background-color: #fff;
-    font-size: 14px;
+    font-size: 13px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 1000px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 .main-content-header {
@@ -259,7 +259,7 @@ body {
 .form-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 10px;
     margin-bottom: 20px;
 }
 .form-group {
@@ -268,11 +268,11 @@ body {
 }
 .form-group label {
     margin-bottom: 5px;
-    font-size: 14px;
+    font-size: 13px;
 }
 .form-group select,
 .form-group input {
-    padding: 12px;
+    padding: 6px;
     border: 1px solid #C5C5C5;
     border-radius: 5px;
     max-width: 300px;
@@ -280,14 +280,20 @@ body {
 .tabs {
     display: flex;
     margin-bottom: 20px;
+    border-bottom: 1px solid #1a557e;
+    justify-content: center;
+    font-size: 16px;
+    margin-top: 50px;
+    padding-bottom: 6px;
 }
 .tab {
-    padding: 10px 20px;
+    padding: 10px 40px;
     cursor: pointer;
-    border-bottom: 2px solid transparent;
 }
 .tab.active {
-    border-bottom-color: #000;
+    background: #1a557e;
+    color: #fff;
+    border-radius: 7px;
 }
 .container-table {
     border: 1px solid #E2E2E2;
