--- a/css/dash.css
+++ b/css/dash.css
@@ -70,9 +70,20 @@ font-style: italic;
 }
 body {
     font-family: Arial, sans-serif;
-    background: linear-gradient(116.57deg, #EEEEEE 10.99%, #D3E5D7 66.76%, #B7B7B7 122.53%);
+    background: #ddd;
     display: flex;
     min-height: 100vh;
+}
+.backimage {
+    position: absolute;
+    width: 100%;
+    height: 210px;
+    background: #a6baa7;
+    z-index: -1;
+    background-image: url(../img/back_001.jpg);
+    background-size: cover;
+    background-position: center;
+    filter: brightness(0.5);
 }
 .user-menu {
     position: relative;
@@ -151,6 +162,7 @@ body {
     justify-content: center;
     font-size: 13px;
     position: relative;
+    border-bottom: 10px solid #4a9799;
 }
 .recepcion-number {
     font-size: 20px!important;
@@ -232,6 +244,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 1200px;
     margin: 0 auto;
+    border-bottom: 10px solid #4a9799;
 }
 .main-content-header {
     flex-grow: 1;
@@ -248,6 +261,7 @@ body {
     justify-content: space-between;
     align-items: center;
     margin: 20px 0px;
+    color: #fff;
 }
 .title {
     font-size: 34px;
